api/swim_form/src/tests/derive/form/generic_no_default.stderr
error[E0599]: the method `as_value` exists for struct `S<Valid, Skipped>`, but its trait bounds were not satisfied
  --> src/tests/derive/form/generic_no_default.rs:37:15
   |
26 |     struct S<A, B> {
   |     --------------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<Valid, Skipped>: Form`
   |     doesn't satisfy `S<Valid, Skipped>: StructuralReadable`
   |     doesn't satisfy `S<Valid, Skipped>: StructuralWritable`
...
37 |     let _ = s.as_value();
   |               ^^^^^^^^ method cannot be called on `S<Valid, Skipped>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `S<Valid, Skipped>: StructuralReadable`
           which is required by `S<Valid, Skipped>: Form`
           `S<Valid, Skipped>: StructuralWritable`
           which is required by `S<Valid, Skipped>: Form`
note: the following traits must be implemented
  --> src/structural/read/mod.rs
   |
   |  / pub trait StructuralReadable: RecognizerReadable {
   |  |     fn read_extant() -> Result<Self, ReadError> {
   |  |         let mut rec = Self::make_recognizer();
   |  |         rec.feed_event(ReadEvent::Extant)
...   |
   |  |     }
   |  | }
   |  |_^
   |
  ::: src/structural/write/mod.rs
   |
   | /  pub trait StructuralWritable {
   | |      /// The number of attributes that will be written by this instance.
   | |      fn num_attributes(&self) -> usize;
   | |
...  |
   | |      }
   | |  }
   | |__^
note: the following traits must be implemented
  --> src/structural/read/mod.rs
   |
   |  / pub trait StructuralReadable: RecognizerReadable {
   |  |     fn read_extant() -> Result<Self, ReadError> {
   |  |         let mut rec = Self::make_recognizer();
   |  |         rec.feed_event(ReadEvent::Extant)
...   |
   |  |     }
   |  | }
   |  |_^
   |
  ::: src/structural/write/mod.rs
   |
   | /  pub trait StructuralWritable {
   | |      /// The number of attributes that will be written by this instance.
   | |      fn num_attributes(&self) -> usize;
   | |
...  |
   | |      }
   | |  }
   | |__^

error[E0277]: the trait bound `B: Default` is not satisfied
  --> src/tests/derive/form/generic_no_default.rs:24:14
   |
24 |     #[derive(Form, Debug, PartialEq, Clone)]
   |              ^^^^ the trait `Default` is not implemented for `B`
   |
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting type parameter `B`
   |
24 |     #[derive(Form, B: std::default::Default, Debug, PartialEq, Clone)]
   |                  ++++++++++++++++++++++++++
